logs/dag_id=etl_uber_data/run_id=manual__2023-07-18T190123.465650+0000/task_id=load_postgres/attempt=2.log
[2023-07-18T19:02:14.038+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_uber_data.load_postgres manual__2023-07-18T19:01:23.465650+00:00 [queued]>
[2023-07-18T19:02:14.045+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_uber_data.load_postgres manual__2023-07-18T19:01:23.465650+00:00 [queued]>
[2023-07-18T19:02:14.046+0000] {taskinstance.py:1308} INFO - Starting attempt 2 of 3
[2023-07-18T19:02:14.057+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): load_postgres> on 2023-07-18 19:01:23.465650+00:00
[2023-07-18T19:02:14.062+0000] {standard_task_runner.py:57} INFO - Started process 2557 to run task
[2023-07-18T19:02:14.064+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_uber_data', 'load_postgres', 'manual__2023-07-18T19:01:23.465650+00:00', '--job-id', '493', '--raw', '--subdir', 'DAGS_FOLDER/etl_uber_data.py', '--cfg-path', '/tmp/tmpxfelevt0']
[2023-07-18T19:02:14.066+0000] {standard_task_runner.py:85} INFO - Job 493: Subtask load_postgres
[2023-07-18T19:02:14.103+0000] {task_command.py:410} INFO - Running <TaskInstance: etl_uber_data.load_postgres manual__2023-07-18T19:01:23.465650+00:00 [running]> on host 4488070fba17
[2023-07-18T19:02:14.171+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Mervyn Frost' AIRFLOW_CTX_DAG_ID='etl_uber_data' AIRFLOW_CTX_TASK_ID='load_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-07-18T19:01:23.465650+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-07-18T19:01:23.465650+00:00'
[2023-07-18T19:02:35.286+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_uber_data.py", line 157, in load
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 1: \dt
        ^

[2023-07-18T19:02:35.296+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_uber_data, task_id=load_postgres, execution_date=20230718T190123, start_date=20230718T190214, end_date=20230718T190235
[2023-07-18T19:02:35.306+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 493 for task load_postgres (syntax error at or near "\"
LINE 1: \dt
        ^
; 2557)
[2023-07-18T19:02:35.349+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-07-18T19:02:35.362+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
